# Azure-Orbital-STAC

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SUPPORT.md  pyproject.toml
deploy/: README.md
deploy/bicep/: main.bicep
deploy/bicep/groups/: cloud-init-ubuntu.txt  data.bicep  monitoring.bicep  networking.bicep  processing.bicep
deploy/bicep/modules/: acr.bicep  acr.credentials.to.keyvault.bicep  aks-add-nodepool.bicep  aks-attach-acr.bicep  aks-cluster-with-pod-identity.bicep  aks-cluster.bicep  aks-pod-identity.bicep  akv.bicep  akv.policy.bicep  akv.secrets.bicep  apim.api.bicep  apim.api.operations.bicep  apim.bicep  apim.namedValues.bicep  apim.security-group.bicep  appinsights.bicep  appinsights.credentials.to.keyvault.bicep  assign-managed-identity-operator-to-aks.bicep  bastion-security-group.bicep  bastion.bicep  cliscript.bicep  eventgrid.bicep  eventgrid.serviceBus.subscription.bicep  postgres.flexible.svc.bicep  private-dns-zone.bicep  private-dns-zone.vnetlink.bicep  private-endpoint.bicep  publicip.bicep  resourcegroup.role-assignment.bicep  security-group.bicep  servicebus-role-assignment.bicep  servicebus.bicep  servicebus.existingrules.bicep  servicebus.secured.vnet.bicep  servicebus.topic.bicep  servicebus.topic.credential.to.keyvault.bicep  servicebus.topic.subscription.bicep  servicebus.vnet.access.bicep  storage.bicep  storage.credentials.to.keyvault.bicep  (+8 more)
deploy/data/: claims.json  roles.json
deploy/helm/stac-browser/: Chart.yaml  values.yaml
deploy/helm/stac-browser/templates/: deployment.yaml  ingress.yaml  service.yaml
deploy/helm/stac-scaler/: Chart.yaml  README.md  values.yaml
deploy/helm/stac-scaler/templates/: _checks.yaml  deployment.yaml  ingress.yaml  proc-gen-stac-deploy.yaml  proc-stac-col-deploy.yaml  proc-stac-evnt-deploy.yaml  scaledjob.yaml  scaledobject.yaml  secret.yaml  secrets-provider.yaml  service-account.yaml  service.yaml
deploy/kube_yaml/stac-scaler/: values.yaml
deploy/kube_yaml/stac-scaler/templates/: NOTES.txt  job.yaml  trigger.yaml
deploy/sample-data/: collection_naip_test.json
deploy/scripts/: build.sh  cleanup.sh  configure.sh  ingest.sh  install.sh  secure-keyvault.sh  secure-stac-endpoints.sh  setup.sh
docs/: accessing-keyvault.md  cataloging-sample-data.md  deploying-infra.md  using-bastion-for-ssh.md
src/azure-stac-cli/: Dockerfile
src/azure-stac-cli/stac/: requirements.txt  setup.py  stac
src/azure-stac-cli/stac/cli/: __init__.py  __main__.py
src/azure-stac-cli/stac/commands/: __command.py  processor.py
src/azure-stac-cli/stac/common/: __utilities.py
src/azure-stac-cli/stac/core/: __init__.py  metrics.py  processor.py
src/azure-stac-cli/stac/metrics/: __metrics_factory.py  data_metrics.py  message_metrics.py  pod_metrics.py
src/azure-stac-cli/stac/processors/core/: ingest_stac_collection.py  ingest_stac_item.py
src/azure-stac-cli/stac/processors/naip/: __constants.py  __grid.py  __stac.py  __utils.py  extract_stac_from_naip.py
src/azure_stac/cli/: __main__.py
src/azure_stac/commands/: __command.py  processor.py
src/azure_stac/common/: __blob_service.py  __pypgstac.py  __utilities.py
src/azure_stac/core/: __init__.py  metrics.py  processor.py
src/azure_stac/metrics/: __metrics_factory.py  data_metrics.py  message_metrics.py  pod_metrics.py
src/azure_stac/processors/core/: ingest_stac_collection.py  ingest_stac_item.py
src/azure_stac/processors/naip/: __constants.py  __grid.py  __stac.py  __utils.py  extract_stac_from_naip.py
src/processors/: README.md
src/processors/generate_stac_item/: Dockerfile  _blob_services.py  _env_variables.py  _naip_utils.py  _stac.py  dev.env  main.py
src/processors/stac_collection/: Dockerfile  README.md  _env_variables.py  blob_service.py
src/processors/stac_to_pg/: README.md  _env_variables.py  dev.env  main.py
src/stac_fastapi_k8s/: README.md  app-stacfastapi-deployment.tpl.yaml
src/stac_ingestion/: README.md  aks-ingest-deployment.yaml
src/stac_ingestion/generate_stac_item/: README.md  _blob_services.py  _generate_sas.py  main.py  requirements.txt
src/stac_ingestion/stac_collection/: README.md  main.py  requirements.txt
src/stac_ingestion/stac_to_pg/: README.md  main.py  requirements.txt
